--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: vega-test
+service: vega-deploy
 
 frameworkVersion: "3"
 
@@ -7,41 +7,271 @@ provider:
   runtime: nodejs16.x
   architecture: arm64
   timeout: 10
-  # environment:
-  #   APP_ENV_VARIABLE: FOOBAR
-  stage: dev
+  stage: ${file(./STAGE.yml):STAGE}
+  httpApi:
+    name: ${self:service}-${sls:stage}
 
 plugins:
-  - serverless-plugin-git-variables
+  - serverless-plugin-utils
 
 custom:
-  prodBranch:
-    main: "prod-"
-    dev: ${opt.stage}-${git:branch}-
-  namePfx: ${self:custom.prodBranch.${git:branch}, ${opt.stage}-${git:branch}-}
+  TEST: dev-test
+  #pfx: ${ternary(${sls:stage}, prod, ${self:service}-prod-, ${self:service}-${sls:stage}-)}
+  subDomain: ${ternary( ${sls:stage}, prod, xxx, dev-${sls:stage} )} #TODO xxx -> www
+  subDomainApi: ${ternary(${sls:stage}, prod, api, dev-${sls:stage}-api )}
+  # pfx: ${params:pfx}
+  # subDomain: ${params:subDomain}
+  # subDomainApi: ${params:subDomainApi}
 
 functions:
   hello:
-    name: ${self:custom.namePfx}hello
     handler: handler.hello
     events:
       - httpApi: ANY /hello
-# resources:
-#   Resources:
-#     #Certificates: ${file(./serverless-certificates.yml)}
-#     #
-#     # Create Route 53 (sub-domains) records
-#     # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html
-#     #
-#     Route53:
-#       Type: AWS::Route53::RecordSet
-#       Properties:
-#         HostedZoneName: "bidiboo.com."
-#         Comment: Branch ${git:stage} {$self:provider.stage}
-#         Name: ${git:basePath}.bidiboo.com #TODO git branch
-#         Type: CNAME
-#         TTL: 300
-#         ResourceRecords:
-#           - cname.vercel-dns.com
 
-#     CloudFrontDistribution: ${file(./serverless-cloudfront.yml)}
+resources:
+  Resources:
+    #
+    # Create Vercel Route 53 (sub-domains) records
+    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html
+    #
+    VercelRoute53:
+      Type: AWS::Route53::RecordSet
+      Properties:
+        HostedZoneName: "bidi.boo."
+        Comment: ${sls:stage}
+        Name: ${self:custom.subDomain}.bidi.boo
+        Type: CNAME
+        TTL: 300
+        ResourceRecords:
+          - cname.vercel-dns.com
+    #
+    # Create Cloudfront Distribution
+    #
+    # Export an existing cloudfront distribution:
+    # aws cloudfront get-distribution-config --id E1VKJ3NZ5SO2Y2 --output yaml
+    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cloudfront-distribution-distributionconfig.html
+    CloudFrontDistribution: ${file(serverless-cloudfront.yml)}
+      Type: AWS::CloudFront::Distribution
+      Properties:
+        DistributionConfig:
+          HttpVersion: http2and3
+          #IsIPV6Enabled: true error: extraneous key [IsIPV6Enabled] is not permitted
+          PriceClass: PriceClass_100
+          Aliases: #TODO
+            - ${self:custom.subDomainApi}.bidi.boo
+          #   #- dev-api.playgrnd.media
+          ViewerCertificate:
+            AcmCertificateArn: arn:aws:acm:us-east-1:${aws:accountId}:certificate/05836655-4e04-4908-b545-3453a3930651
+            SslSupportMethod: sni-only
+            MinimumProtocolVersion: TLSv1.2_2021
+          # Origins
+          Origins:
+            - Id: Api Gateway
+              DomainName: c4ixkq2aw7.execute-api.us-east-1.amazonaws.com #TODO
+              #  ${ApiGatewayRestApi}
+              # !Join [
+              #   "",
+              #   [
+              #     !Ref ApiGatewayRestApi,
+              #     .,
+              #     execute-api,
+              #     .,
+              #     'us-east-1',
+              #     #!Ref "AWS::Region",
+              #     .,
+              #     amazonaws.com,
+              #   ],
+              # ]
+              CustomOriginConfig:
+                HTTPSPort: 443
+                OriginProtocolPolicy: https-only
+                OriginSSLProtocols:
+                  - TLSv1.2
+              OriginShield:
+                Enabled: true
+                OriginShieldRegion: "us-east-1"
+            - Id: Vercel
+              DomainName: vega-${sls:stage}.vercel.app
+              CustomOriginConfig:
+                HTTPSPort: 443
+                OriginProtocolPolicy: https-only
+                OriginSSLProtocols:
+                  - TLSv1.2
+              OriginShield:
+                Enabled: true
+                OriginShieldRegion: "us-east-1"
+          Enabled: true
+          Comment: ${self:service} ${sls:stage}
+          #=====================================
+          # DefaultCacheBehavior
+          #=====================================
+          DefaultCacheBehavior:
+            AllowedMethods:
+              - DELETE
+              - GET
+              - HEAD
+              - OPTIONS
+              - PATCH
+              - POST
+              - PUT
+            CachedMethods:
+              - GET
+              - HEAD
+            CachePolicyId: db370968-d233-4984-991e-c8f1f658f425 #TODO
+            Compress: true
+            FunctionAssociations:
+              - FunctionARN: arn:aws:cloudfront::327381650662:function/Vega-Set-Forwarded-Host #TODO
+                EventType: "viewer-request"
+            TargetOriginId: Api Gateway
+            ViewerProtocolPolicy: https-only
+          CacheBehaviors:
+            # /ph/*
+            - PathPattern: "/ph/*"
+              AllowedMethods:
+                - GET
+                - HEAD
+              CachedMethods:
+                - GET
+                - HEAD
+              CachePolicyId: 4114ab1b-1405-4266-a869-63ec5bfc439c #TODO
+              Compress: true
+              FunctionAssociations:
+                - FunctionARN: arn:aws:cloudfront::327381650662:function/Vega-Set-Forwarded-Host #TODO
+                  EventType: "viewer-request"
+              TargetOriginId: Api Gateway
+              ViewerProtocolPolicy: https-only
+            #=====================================
+            # /v7/a/*
+            #=====================================
+            - PathPattern: "/v7/a/*"
+              AllowedMethods:
+                - DELETE
+                - GET
+                - HEAD
+                - OPTIONS
+                - PATCH
+                - POST
+                - PUT
+              CachedMethods:
+                - GET
+                - HEAD
+              CachePolicyId: 6f8b1995-bc1b-49bc-87a6-fd3493e2f5b9 #TODO
+              Compress: true
+              FunctionAssociations:
+                - FunctionARN: arn:aws:cloudfront::327381650662:function/Vega-Set-Forwarded-Host #TODO
+                  EventType: "viewer-request"
+              ResponseHeadersPolicyId: 5cc3b908-e619-4b99-88e5-2cf7f45965bd #TODO
+              TargetOriginId: Api Gateway
+              ViewerProtocolPolicy: https-only
+            #=====================================
+            # /v7/admin/*
+            #=====================================
+            - PathPattern: "/v7/admin/*"
+              AllowedMethods:
+                - DELETE
+                - GET
+                - HEAD
+                - OPTIONS
+                - PATCH
+                - POST
+                - PUT
+              CachedMethods:
+                - GET
+                - HEAD
+              CachePolicyId: 6f8b1995-bc1b-49bc-87a6-fd3493e2f5b9 #TODO
+              Compress: true
+              FunctionAssociations:
+                - FunctionARN: arn:aws:cloudfront::327381650662:function/Vega-Set-Forwarded-Host #TODO
+                  EventType: "viewer-request"
+              ResponseHeadersPolicyId: 5cc3b908-e619-4b99-88e5-2cf7f45965bd #TODO
+              TargetOriginId: Api Gateway
+              ViewerProtocolPolicy: https-only
+            #=====================================
+            # /v7/c/*
+            #=====================================
+            - PathPattern: "/v7/c/*"
+              AllowedMethods:
+                - GET
+                - HEAD
+              CachedMethods:
+                - GET
+                - HEAD
+              CachePolicyId: 8445ee16-cda4-4000-b8a3-b1aa80047d20 #TODO
+              Compress: true
+              FunctionAssociations:
+                - FunctionARN: arn:aws:cloudfront::327381650662:function/Vega-Set-Forwarded-Host #TODO
+                  EventType: "viewer-request"
+              ResponseHeadersPolicyId: 5cc3b908-e619-4b99-88e5-2cf7f45965bd #TODO
+              TargetOriginId: Api Gateway
+              ViewerProtocolPolicy: https-only
+            #=====================================
+            # /v7/auth/?et-session
+            #=====================================
+            - PathPattern: "/v7/auth/?et-session"
+              AllowedMethods:
+                - DELETE
+                - GET
+                - HEAD
+                - OPTIONS
+                - PATCH
+                - POST
+                - PUT
+              CachedMethods:
+                - GET
+                - HEAD
+              CachePolicyId: 6f8b1995-bc1b-49bc-87a6-fd3493e2f5b9 #TODO
+              Compress: true
+              FunctionAssociations:
+                - FunctionARN: arn:aws:cloudfront::327381650662:function/Vega-Set-Forwarded-Host #TODO
+                  EventType: "viewer-request"
+              ResponseHeadersPolicyId: d433d2a9-5c36-45eb-a99e-a295942cd9f7 #TODO
+              TargetOriginId: Api Gateway
+              ViewerProtocolPolicy: https-only
+            #=====================================
+            # /v7/auth/*
+            #=====================================
+            - PathPattern: "/v7/auth/*"
+              AllowedMethods:
+                - GET
+                - HEAD
+              CachedMethods:
+                - GET
+                - HEAD
+              CachePolicyId: 8445ee16-cda4-4000-b8a3-b1aa80047d20 #TODO
+              Compress: true
+              FunctionAssociations:
+                - FunctionARN: arn:aws:cloudfront::327381650662:function/Vega-Set-Forwarded-Host #TODO
+                  EventType: "viewer-request"
+              TargetOriginId: Api Gateway
+              ViewerProtocolPolicy: https-only
+            #=====================================
+            # /_next/static/*
+            #=====================================
+            - PathPattern: "/_next/static/*"
+              AllowedMethods:
+                - GET
+                - HEAD
+              CachedMethods:
+                - GET
+                - HEAD
+              CachePolicyId: 9f3b4511-4293-43f0-b24b-0a15a78c4d31 #TODO
+              Compress: true
+              TargetOriginId: Vercel
+              ViewerProtocolPolicy: https-only
+
+    #
+    # Create Api Route 53 (sub-domains) records
+    # Must be set AFTER cloudfront because it uses cloudfront ARN
+    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html
+    #
+    ApiRoute53:
+      Type: AWS::Route53::RecordSet
+      Properties:
+        HostedZoneName: "bidi.boo."
+        Comment: ${sls:stage} API
+        Name: ${self:custom.subDomainApi}.bidi.boo
+        Type: A
+        AliasTarget:
+          HostedZoneId: Z2FDTNDATAQYW2 # Do not change "Specify Z2FDTNDATAQYW2. This is always the hosted zone ID when you create an alias record that routes traffic to a CloudFront distribution."
+          DNSName: !GetAtt CloudFrontDistribution.DomainName
