Adding all domains + SSM

--- a/resources/Certificate.yml
+++ b/resources/Certificate.yml
@@ -12,12 +12,24 @@ Resources:
     Properties:
       DomainName: "*.dev.playgrnd.media"
       SubjectAlternativeNames:
+        - "*.dev.playgrnd.media"
+        - "*.dev.baybee.fr"
+        - "*.dev.baybee.be"
+        - "*.dev.baybee.ch"
         - "*.dev.bidi.boo"
+        - "*.dev.bidiboo.com"
+        - "*.dev.bidiboo.co.uk"
         - "*.dev.king.pet"
-        # - "king.pet"
-        # - "littlemiss.beauty"
-        # - "*.littlemiss.beauty"
+        - "*.dev.kingpet.fr"
+        - "*.dev.kingpet.be"
+        # - "*.dev.kingpet.ch"
+        # - "*.dev.kingpet.com"
+        # - "*.dev.kingpet.co.uk"
+        # - "*.dev.littlemiss.beauty"
+        # - "*.dev.littlemissbeauty.com"
+        # - "*.dev.lullapanda.com"
+        # - "*.dev.missprincesse.fr"
+        # - "*.dev.missprincesse.be"
+        # - "*.dev.missprincesse.ch"
+        # - "*.dev.pageant.dog"
       ValidationMethod: DNS
-      # DomainValidationOptions:
-      #   - DomainName: "*.dev.playgrnd.media"
-      #   - DomainName: "*.dev.bidi.boo"
